acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/sealed_class/A1.swift
let a: Kotlin_ = Kotlin_.A1()

switch onEnum(of: a) {
    case .A1(_):
        exit(0)
    case .A2(_):
        exit(1)
}
